Fix header address align

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ p {
   margin-top: 20px;
 }
 
-.contacts-list > .item:not(:first-child) {
+.page-footer .contacts-list > .item:not(:first-child) {
   margin-top: 9px;
 }
 
